--- a/build.gradle
+++ b/build.gradle
@@ -111,7 +111,7 @@ dependencies {
     deobfCompile "slimeknights.mantle:Mantle:1.12-${config.mantle_version}"
     deobfCompile "slimeknights:TConstruct:1.12-${config.tinker_version}"
     compile "mod.chiselsandbits:chiselsandbits:${config.c_b_version}"
-
+    compile fileTree(dir: 'libs', include: '*.jar')
     structuresCompile sourceSets.api.output
     //blockOutCompile sourceSets.api.output
 
